// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Upload Collection Default 1`] = `
<div
  dir="ltr"
>
  <h4>
    Default mode
  </h4>
  

  <ul
    class="fd-list fd-list--byline fd-upload-collection"
    role="list"
  >
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <a
          class="fd-list__title fd-link fd-upload-collection__title"
          href="#"
        >
          File_Name.extension
        </a>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
            
        <div
          class="fd-upload-collection__status-group"
        >
          
                
          <span
            class="fd-object-status fd-object-status--negative"
          >
            This is a negative status
          </span>
          
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                
          <span
            class="fd-object-status fd-object-status--positive"
          >
            This is a positive status
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--edit"
          />
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--decline"
          />
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__title-container"
        >
          
                
          <a
            class="fd-list__title fd-link fd-upload-collection__title"
            href="#"
          >
            File_Name.extension
          </a>
          
                
          <div
            class="fd-object-marker"
          >
            
                    
            <i
              aria-label="icon for request"
              class="fd-object-marker__icon sap-icon--request"
              role="img"
            />
            
                
          </div>
          
                
          <div
            class="fd-object-marker"
          >
            
                    
            <i
              aria-label="icon for favourite"
              class="fd-object-marker__icon sap-icon--favorite"
              role="img"
            />
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
            
        <div
          class="fd-upload-collection__status-group"
        >
          
                
          <span
            class="fd-object-status fd-object-status--negative"
          >
            This is a negative status
          </span>
          
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                
          <span
            class="fd-object-status fd-object-status--positive"
          >
            This is a positive status
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--edit"
          />
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--decline"
          />
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <a
          class="fd-list__title fd-link fd-upload-collection__title"
          href="#"
        >
          File_Name.extension
        </a>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
            
        <div
          class="fd-upload-collection__status-group"
        >
          
                
          <span
            class="fd-object-status fd-object-status--negative"
          >
            This is a negative status
          </span>
          
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                
          <span
            class="fd-object-status fd-object-status--positive"
          >
            This is a positive status
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--edit"
          />
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--decline"
          />
        </button>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


  <br />
  <br />
  


  <h4>
    Default mode - small
  </h4>
  


  <ul
    class="fd-list fd-list--byline fd-upload-collection fd-upload-collection--sm"
    role="list"
    style="width: 29.5rem;"
  >
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <a
          class="fd-list__title fd-link fd-upload-collection__title"
          href="#"
        >
          File_Name.extension
        </a>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
            
        <div
          class="fd-upload-collection__status-group"
        >
          
                
          <span
            class="fd-object-status fd-object-status--negative"
          >
            This is a negative status
          </span>
          
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                
          <span
            class="fd-object-status fd-object-status--positive"
          >
            This is a positive status
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--edit"
          />
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--decline"
          />
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <a
          class="fd-list__title fd-link fd-upload-collection__title"
          href="#"
        >
          File_Name.extension
        </a>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
            
        <div
          class="fd-upload-collection__status-group"
        >
          
                
          <span
            class="fd-object-status fd-object-status--negative"
          >
            This is a negative status
          </span>
          
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                
          <span
            class="fd-object-status fd-object-status--positive"
          >
            This is a positive status
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--edit"
          />
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--decline"
          />
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <a
          class="fd-list__title fd-link fd-upload-collection__title"
          href="#"
        >
          File_Name.extension
        </a>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
            
        <div
          class="fd-upload-collection__status-group"
        >
          
                
          <span
            class="fd-object-status fd-object-status--negative"
          >
            This is a negative status
          </span>
          
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                
          <span
            class="fd-object-status fd-object-status--positive"
          >
            This is a positive status
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--edit"
          />
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          <i
            class="sap-icon--decline"
          />
        </button>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


</div>
`;

exports[`Storyshots Components/Upload Collection Edit 1`] = `
<div
  dir="ltr"
>
  

  <h4>
    Edit Mode
  </h4>
  


  <ul
    class="fd-list fd-list--byline fd-upload-collection"
    role="list"
  >
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__form-item"
        >
          
                
          <input
            class="fd-input"
            placeholder="Filename"
            type="text"
          />
          
                
          <span
            class="fd-upload-collection__extension"
          >
            .jpg
          </span>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          Ok
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__form-item"
        >
          
                
          <input
            class="fd-input"
            placeholder="Filename"
            type="text"
          />
          
                
          <span
            class="fd-upload-collection__extension"
          >
            .jpg
          </span>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          Ok
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__form-item"
        >
          
                
          <input
            class="fd-input"
            placeholder="Filename"
            type="text"
          />
          
                
          <span
            class="fd-upload-collection__extension"
          >
            .jpg
          </span>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button fd-button--transparent"
        >
          Ok
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button fd-button--transparent"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


  <br />
  <br />
  


  <h4>
    Edit Mode - small
  </h4>
  


  <ul
    class="fd-list fd-list--byline fd-upload-collection fd-upload-collection--sm"
    role="list"
    style="width: 29.5rem;"
  >
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__form-item"
        >
          
                
          <input
            class="fd-input"
            placeholder="Filename"
            type="text"
          />
          
                
          <span
            class="fd-upload-collection__extension"
          >
            .jpg
          </span>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button"
        >
          Ok
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__form-item"
        >
          
                
          <input
            class="fd-input"
            placeholder="Filename"
            type="text"
          />
          
                
          <span
            class="fd-upload-collection__extension"
          >
            .jpg
          </span>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button"
        >
          Ok
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </li>
    
    
    <li
      class="fd-list__item fd-upload-collection__item"
      role="listitem"
      tabindex="0"
    >
      
        
      <span
        class="fd-list__thumbnail fd-upload-collection__thumbnail"
      >
        <i
          class="sap-icon--activate"
          role="presentation"
        />
      </span>
      
        
      <div
        class="fd-list__content"
      >
        
            
        <div
          class="fd-upload-collection__form-item"
        >
          
                
          <input
            class="fd-input"
            placeholder="Filename"
            type="text"
          />
          
                
          <span
            class="fd-upload-collection__extension"
          >
            .jpg
          </span>
          
            
        </div>
        
            
        <div
          class="fd-upload-collection__description"
        >
          
                This is the file description
                
          <span
            class="fd-upload-collection__text-separator"
          >
             
          </span>
          
                This is an additional description
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-upload-collection__button-group"
      >
        
            
        <button
          aria-label="Edit"
          class="fd-button"
        >
          Ok
        </button>
        
            
        <button
          aria-label="Delete"
          class="fd-button"
        >
          Cancel
        </button>
        
        
      </div>
      
    
    </li>
    

  </ul>
  


</div>
`;

exports[`Storyshots Components/Upload Collection No Data 1`] = `
<div
  dir="ltr"
>
  

  <div
    style="height: 600px; width: 100%;"
  >
    
  
    <div
      class="fd-message-page"
    >
      
    
      <div
        class="fd-message-page__container"
      >
        
      
        <div
          class="fd-message-page__icon-container"
        >
          
        
          <i
            class="sap-icon--attachment fd-message-page__icon"
            role="presentation"
          />
          
      
        </div>
        
      
        <div
          aria-live="polite"
          class="fd-message-page__content"
          role="status"
        >
          
        
          <div
            class="fd-message-page__title"
          >
            
          No files found.
        
          </div>
          
        
          <div
            class="fd-message-page__subtitle"
          >
            
          Drop files to upload, or use the "+" button.
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</div>
`;
